--- a/app/src/main/res/layout/activity_room_search.xml
+++ b/app/src/main/res/layout/activity_room_search.xml
@@ -159,7 +159,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="10dp"
                 android:background="@android:color/white"
                 android:orientation="horizontal"
                 android:paddingStart="16dp"
@@ -185,7 +185,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="10dp"
                 android:background="@android:color/white"
                 android:orientation="vertical"
                 android:padding="16dp">
@@ -197,101 +197,107 @@
                     android:text="Recent Search"
                     android:textColor="@android:color/black" />
 
-                <RelativeLayout
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_recent_places"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp">
+                    android:layout_height="match_parent" />
 
-                    <mastersunny.rooms.utils.CircleImageView
-                        android:id="@+id/img_place"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/dummy_image2" />
+                <!--<RelativeLayout-->
+                <!--android:id="@+id/recent_layout"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="80dp">-->
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_toRightOf="@+id/img_place"
-                        android:orientation="vertical">
+                <!--<mastersunny.rooms.utils.CircleImageView-->
+                <!--android:id="@+id/img_place"-->
+                <!--android:layout_width="60dp"-->
+                <!--android:layout_height="60dp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:src="@drawable/dummy_image2" />-->
 
-                        <TextView
-                            android:id="@+id/tv_place_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:maxLines="1"
-                            android:text="Dhaka"
-                            android:textColor="@android:color/black" />
+                <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginStart="16dp"-->
+                <!--android:layout_toRightOf="@+id/img_place"-->
+                <!--android:orientation="vertical">-->
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_toRightOf="@+id/img_place"
-                            android:text="28 Mar - 5 Apr" />
+                <!--<TextView-->
+                <!--android:id="@+id/tv_place_name"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:ellipsize="end"-->
+                <!--android:maxLines="1"-->
+                <!--android:text="Dhaka"-->
+                <!--android:textColor="@android:color/black" />-->
 
-                    </LinearLayout>
+                <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:layout_toRightOf="@+id/img_place"-->
+                <!--android:text="28 Mar - 5 Apr" />-->
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.4dp"
-                        android:layout_alignParentBottom="true"
-                        android:background="@color/colorPrimary" />
+                <!--</LinearLayout>-->
 
-                </RelativeLayout>
+                <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0.4dp"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:background="@color/colorPrimary" />-->
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp">
+                <!--</RelativeLayout>-->
 
-                    <mastersunny.rooms.utils.CircleImageView
-                        android:id="@+id/img_place2"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/dummy_image2" />
+                <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="80dp">-->
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_toRightOf="@+id/img_place2"
-                        android:orientation="vertical">
+                <!--<mastersunny.rooms.utils.CircleImageView-->
+                <!--android:id="@+id/img_place2"-->
+                <!--android:layout_width="60dp"-->
+                <!--android:layout_height="60dp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:src="@drawable/dummy_image2" />-->
 
-                        <TextView
-                            android:id="@+id/tv_place_name2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:maxLines="1"
-                            android:text="Sylhet"
-                            android:textColor="@android:color/black" />
+                <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginStart="16dp"-->
+                <!--android:layout_toRightOf="@+id/img_place2"-->
+                <!--android:orientation="vertical">-->
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_toRightOf="@+id/img_place"
-                            android:text="28 Mar - 5 Apr" />
+                <!--<TextView-->
+                <!--android:id="@+id/tv_place_name2"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:ellipsize="end"-->
+                <!--android:maxLines="1"-->
+                <!--android:text="Sylhet"-->
+                <!--android:textColor="@android:color/black" />-->
 
-                    </LinearLayout>
+                <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:layout_toRightOf="@+id/img_place"-->
+                <!--android:text="28 Mar - 5 Apr" />-->
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.4dp"
-                        android:layout_alignParentBottom="true"
-                        android:background="@color/colorPrimary" />
+                <!--</LinearLayout>-->
 
-                </RelativeLayout>
+                <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0.4dp"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:background="@color/colorPrimary" />-->
+
+                <!--</RelativeLayout>-->
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="10dp"
                 android:background="@android:color/white"
                 android:orientation="vertical"
                 android:padding="16dp">
@@ -311,7 +317,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
 
     </android.support.v4.widget.NestedScrollView>
 
