--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:background="@android:color/white">
 
     <ImageView
-        android:layout_marginTop="2dp"
         android:id="@+id/room_image"
         android:layout_width="match_parent"
         android:layout_height="210dp"
         android:layout_marginStart="3dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="3dp"
         android:scaleType="centerCrop"
         android:src="@drawable/dummy_image2" />
@@ -62,6 +63,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_like_white" />
+        app:srcCompat="@drawable/ic_like_white" />
 
 </RelativeLayout>
