--- a/app/src/main/res/layout/nearby_item_header.xml
+++ b/app/src/main/res/layout/nearby_item_header.xml
@@ -6,9 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingTop="@dimen/margin_5"
-    android:paddingRight="10dp"
-    android:paddingBottom="@dimen/margin_5">
+    android:paddingRight="10dp">
 
     <mastersunny.rooms.utils.CircleImageView
         android:id="@+id/place_image"
