--- a/app/src/main/res/layout/poplar_item_layout.xml
+++ b/app/src/main/res/layout/poplar_item_layout.xml
@@ -1,53 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/white">
+    android:layout_width="160dp"
+    android:layout_height="140dp"
+    android:layout_marginRight="10dp"
+    android:orientation="vertical">
+
 
     <ImageView
-        android:id="@+id/room_image"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="3dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.8"
         android:scaleType="centerCrop"
-        android:src="@drawable/dummy_image2" />
+        android:src="@drawable/dhaka" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/room_image"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical">
+        android:text="Dhaka"
+        android:textColor="@android:color/black"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:includeFontPadding="false"
-            android:maxLines="1"
-            android:text="Dhaka"
-            android:textColor="#242529" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bangladesh" />
 
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_marginTop="@dimen/margin_2"
-            android:ellipsize="end"
-            android:gravity="bottom"
-            android:maxLines="1"
-            android:text="Gulshan, Dhaka"
-            android:textSize="@dimen/text_size_12" />
+</LinearLayout>
 
-    </LinearLayout>
-
-</RelativeLayout>
