--- a/app/src/main/res/layout/activity_room_search.xml
+++ b/app/src/main/res/layout/activity_room_search.xml
@@ -125,7 +125,7 @@
                     android:id="@+id/tv_adult_qty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1 Adult"
+                    android:text="1 Guest"
                     android:textColor="@color/black_overlay" />
 
             </LinearLayout>
