--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -23,7 +23,7 @@
             android:paddingBottom="@dimen/margin_16">
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -41,7 +41,7 @@
                     android:id="@+id/map_layout"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_below="@+id/name"
+                    android:layout_below="@+id/title"
                     android:layout_alignParentStart="true"
                     app:srcCompat="@drawable/ic_google" />
 
