--- a/app/src/main/res/layout/city_item_layout.xml
+++ b/app/src/main/res/layout/city_item_layout.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="16dp">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
