--- a/app/src/main/res/layout/guest_select_fragment.xml
+++ b/app/src/main/res/layout/guest_select_fragment.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Guests"
+        android:text="Select rooms and guests"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="start"
-            android:text="Adults"
+            android:text="Guests"
             android:textColor="@android:color/black" />
 
         <com.ornach.magicicon.IconButton
@@ -116,13 +116,15 @@
         android:layout_height="1dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="#E4E4E4" />
+        android:background="#E4E4E4"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="invisible">
 
         <TextView
             android:layout_width="0dp"
