--- a/app/src/main/res/layout/saved_room_item_layout.xml
+++ b/app/src/main/res/layout/saved_room_item_layout.xml
@@ -60,7 +60,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
